--- a/src/components/Content/Main/Messages/Dialogs/Dialogs.module.css
+++ b/src/components/Content/Main/Messages/Dialogs/Dialogs.module.css
@@ -1,6 +1,6 @@
 .dialogs {
   margin: 0 -15px 0 15px;
-  padding-right: 15px;
+  padding-right: 10px;
   overflow-y: scroll;
 }
 
