--- a/src/components/Content/Main/Profile/UserInfo/UserInfo.module.css
+++ b/src/components/Content/Main/Profile/UserInfo/UserInfo.module.css
@@ -19,9 +19,10 @@
   height: 38px;
 
   font-size: 12px;
+  letter-spacing: 0.5px;
   color: var(--color-main);
 
-  background: var(--color-very-light);
+  background: var(--color-extra-normal);
   border-radius: 0 8px 0 10px;
   border: none;
   cursor: pointer;
